--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Python Project</title>
+        <title>IPP Final Project</title>
         
         <!-- Bootstrap 4 CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css">
@@ -26,10 +26,10 @@
         <div class="jumbotron">
             <div class="container">
                 <h1>{{ greeting }}</h1>
-                <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                <p>This is the GIF search engine created for the final project of python programming class.</p>
                 <form action="/results" class="form-inline">
                     <div class="form-group">
-                        <input type="text" name="stock" placeholder="Enter a stock ticker" class="form-control">
+                        <input type="text" name="stock" placeholder="Enter keyword for gif" class="form-control">
                     </div>
                     <input type="submit" class="btn btn-primary">
                 </form>
