--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
         <div class="jumbotron">
             <div class="container">
                 <h1>About Me</h1>
-                <p>My name is Mattan, it rhymes with Settlers of Catan.</p>
+                <p>This site was created by Joji and Mathias</p>
             </div>
         </div>
 
