--- a/templates/coolresults.html
+++ b/templates/coolresults.html
@@ -28,9 +28,27 @@
         <!-- Jumbotron -->
         <div class="jumbotron">
             <div class="container">
-                <h1>About Me</h1>
-                <p>This site was created by Joji and Mathias</p>
+                <!--return a mesage including the search term-->
+                <h1>GIFs tagged with "cool {{ coolkey }}"</h1>
+                    <!--link to the index page-->
+                    <a class="nav-link" href="/">Back to search</a>
+
             </div>
+        </div>
+        
+
+        <!-- Jumbotron -->
+        <div class="jumbotron">
+            <div class="container">
+            <div class="card-columns">
+            <!--using the for loop to display the gifs-->
+            {% for coolresult in coolresults %}
+                <div class="card">
+                  <a href="{{ coolresult.url }}" target="_blank">
+                    <img class="card-img-top" src="{{ coolresult.media_url }}" style="width:100%; height:auto;">
+                </a>
+                </div>
+            {% endfor %}      
         </div>
 
         <div class="container">
