--- a/templates/results.html
+++ b/templates/results.html
@@ -10,13 +10,16 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-static-top navbar-dark bg-inverse">
             <div class="container">
-                <a class="navbar-brand" href="/">Python Project</a>
+                <a class="navbar-brand" href="/">IPP Final Project</a>
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/jtakamoto/sample_app2.git">GitHub</a>
                     </li>
                 </ul>
             </div>
@@ -25,7 +28,20 @@
         <!-- Jumbotron -->
         <div class="jumbotron">
             <div class="container">
+                <!--return a mesage including the search term-->
+                <h1>GIFs tagged with "{{ key }}"</h1>
+                    <!--link to the index page-->
+                    <a class="nav-link" href="/">Back to search</a>
+
+            </div>
+        </div>
+        
+
+        <!-- Jumbotron -->
+        <div class="jumbotron">
+            <div class="container">
             <div class="card-columns">
+            <!--using the for loop to display the gifs-->
             {% for result in results %}
                 <div class="card">
                   <a href="{{ result.url }}" target="_blank">
